fixed stacktrace output, updated docs, fixed "BINDEX_REPO_URL" config. added bindex-core dependency to gw-maven-plugin.